overlays/prod/rucio/grid-certificates-patch.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: usdf-automatix
spec:
  template:
    spec:
      initContainers:
      - name: grid-certs
        image: docker.io/bjwhitefnal/grid-security-files:32
        command: ["/bin/bash", "-c", "chmod 755 /out/ && cp -rv --preserve=links /grid-certificates/* /out/ && cp -rv --preserve=links /gr
id-certificates/* /out2/"]
        volumeMounts:
        - name: ca-volume
          mountPath: /out/
        - name: ca-volume-reaper
          mountPath: /out2/
      volumes:
       - name: ca-volume
         secret:
           $patch: delete
         emptyDir: {}
       - name: ca-volume-reaper
         secret:
           $patch: delete
         emptyDir: {}
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: usdf-reaper
spec:
  template:
    spec:
      initContainers:
      - name: grid-certs
        image: docker.io/bjwhitefnal/grid-security-files:32
        command: ["/bin/bash", "-c", "chmod 755 /out/ && cp -rv --preserve=links /grid-certificates/* /out/"]
        volumeMounts:
        - name: ca-volume
          mountPath: /out/
      volumes:
       - name: ca-volume
         secret:
           $patch: delete
         emptyDir: {}
