overlays/prod/rucio/hermesk-image-patch.yaml
# This patches the hermes2 Deployment containers to utilize the 
# image built for a Rubin custom Hermes daemon with Kafka support

apiVersion: apps/v1
kind: Deployment
metadata:
  name: usdf-hermes
spec:
  template:
    spec:
      containers:
        - name: rucio-daemons
          image: "docker.io/srp3/rucio-daemons-hermesk:2.0"
