overlays/prod/rucio/rucio-env-patch.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: usdf-automatix
spec:
  template:
    spec:
      containers:
      - name: rucio-daemons
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: usdf-undertaker
spec:
  template:
    spec:
      containers:
      - name: rucio-daemons
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: usdf-transmogrifier
spec:
  template:
    spec:
      containers:
      - name: rucio-daemons
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: usdf-rucio-ui
spec:
  template:
    spec:
      containers:
      - name: rucio-ui
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: usdf-rucio-server
spec:
  template:
    spec:
      containers:
      - name: rucio-server
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: usdf-reaper 
spec:
  template:
    spec:
      containers:
      - name: rucio-daemons
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: usdf-necromancer
spec:
  template:
    spec:
      containers:
      - name: rucio-daemons
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: usdf-minos
spec:
  template:
    spec:
      containers:
      - name: rucio-daemons
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: usdf-judge-repairer
spec:
  template:
    spec:
      containers:
      - name: rucio-daemons
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: usdf-judge-injector
spec:
  template:
    spec:
      containers:
      - name: rucio-daemons
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: usdf-judge-evaluator
spec:
  template:
    spec:
      containers:
      - name: rucio-daemons
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: usdf-judge-cleaner
spec:
  template:
    spec:
      containers:
      - name: rucio-daemons
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: usdf-conveyor-submitter
spec:
  template:
    spec:
      containers:
      - name: rucio-daemons
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: usdf-conveyor-poller
spec:
  template:
    spec:
      containers:
      - name: rucio-daemons
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: usdf-conveyor-finisher
spec:
  template:
    spec:
      containers:
      - name: rucio-daemons
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: usdf-abacus-rse
spec:
  template:
    spec:
      containers:
      - name: rucio-daemons
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: usdf-abacus-collection-replica
spec:
  template:
    spec:
      containers:
      - name: rucio-daemons
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: usdf-abacus-account
spec:
  template:
    spec:
      containers:
      - name: rucio-daemons
